# NLU-reasoning-orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: adjudicator.py  adjudicator_factory.py  adjudicator_http.py  main.py  monitoring.py  nlu.py  orchestrator.py  policy.py  schemas.py  security.py  state.py  tools.py
docs/: architecture.md
docs/adr/: 0001-hybrid-nlu-orchestration.md  0002-policy-guardrails-and-tooling.md  0003-resilience-cost-control.md  0004-quality-gates-and-slos.md  README.md
eval/: adjudicator_contract_cases.json  benchmark_adjudicators.py  conversation_quality_gate.py  conversations.json  evaluate.py  per_intent_report.py  quality_gate.py  state_transition_eval.py  test_cases.json
scripts/: ci_check.sh  delete_cloud_run.sh  deploy_cloud_run.sh  local_stack.sh  weekly_quality_report.py
tests/: test_adjudicator_factory.py  test_adjudicator_http.py  test_api_state.py  test_monitoring.py  test_orchestrator.py  test_policy.py  test_security.py  test_state_store.py
ui/: streamlit_app.py
