[project]
name = "nlu-reasoning-orchestrator"
version = "1.0.0"
description = "A product-realistic NLU and reasoning orchestration demo for conversational AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Miharc" }
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
